<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Used Item Inventory</string>

    <!-- Label for overflow menu option that inserts fake item data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all item data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Label for the catalog button to add a new item -->
    <string name="add_item_button">Add a New Item</string>

    <!-- Title for the activity to add a new item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_used_item">Add an Item</string>

    <!-- Title for the activity to edit an existing used_item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_used_item">Edit Used Item</string>

    <string name="add_image_button">Select An Image</string>

    <!-- Label for editor menu option to save item and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for editor overflow menu option that sends a mail [CHAR LIMIT=20] -->
    <string name="action_sendmail">Send Mail</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current used_item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for the price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Label for the quantity information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Label for the image information in the editor [CHAR LIMIT=30] -->
    <string name="category_image">Image</string>

    <!-- Text hint for name field in editor [CHAR LIMIT=30] -->
    <string name="hint_item_name">Name</string>

    <!-- Text hint for price field in editor [CHAR LIMIT=30] -->
    <string name="hint_item_price">Market Price</string>

    <!-- Text hint for quantity field in editor [CHAR LIMIT=30] -->
    <string name="hint_item_quantity">Available for Sale</string>

    <!-- Text hint for name field in editor [CHAR LIMIT=30] -->
    <string name="hint_item_image">Upload Image</string>

    <string name="image_preview">Image Preview</string>

    <string name="detail_activity_title">Summary of Used Item</string>

    <!-- Label for tracking the quantity in the Detail Activity -->
    <string name="category_track_quantity">Track Quantity</string>

    <string name="track_a_sale_button">Track Sale</string>

    <string name="track">Track</string>

    <string name="receive_shipment_button">Receive Shipment</string>

    <string name="delete_item_button">Delete Item</string>

    <string name="order_more_button">Order More</string>

    <!-- Toast message in editor when new used_item has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_used_item_successful">Used Item Saved</string>

    <!-- Toast message in editor when new used_item has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_used_item_failed">Error with saving Used Item</string>

    <!-- Toast message in editor when current used_item was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_used_item_successful">Used Item updated</string>

    <!-- Toast message in editor when current used_item has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_used_item_failed">Error with updating used item</string>

    <!-- Title text for the empty view, which describes the the lack of used_items -->
    <string name="empty_view_title_text">No items to display</string>

    <string name="empty_view_subtitle_text">Please press the Add a New Item button to start your list today.</string>

    <!-- List item strings -->
    <string name="price">Asking Price: $</string>

    <string name="available_quantity">Available Quantity:</string>
</resources>

