<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin">

    <Button
        android:id="@+id/list_item_track_button"
        android:text="@string/track"
        style="@style/ButtonStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/list_item_marginTop"
        android:layout_marginLeft="@dimen/activity_margin">

        <TextView
            android:id="@+id/used_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"
            tools:text="Used Socks" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_item_marginTop"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <TextView
                android:id="@+id/used_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_left_indent"
                tools:text="7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available_quantity" />

            <TextView
                android:id="@+id/used_item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_left_indent"
                tools:text="8" />

        </LinearLayout>

        <!-- PROVIDES A CHECK THAT THE CONTENT URL HAS BEEN STORED. TODO: DELETE THIS LATER -->
        <TextView
            android:id="@+id/used_item_image_uri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="content://..." />

    </LinearLayout>


</LinearLayout>